--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Suporte - Zap Delivery</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <title>Suporte - 97 Delivery</title>
   </head>
   <body>
     <div id="root"></div>
